# pinochle-scorer

./: .gitignore  CLAUDE.md  Cargo.toml  POST-DEPLOYMENT-SETUP.md  README.md
.github/workflows/: deploy-frontend.yml  deploy-rust-blue-green.yml
Pinochle Score Keeper/: Completed Hands.bru  Current hand.bru  Declare Trump.bru  Record Bid.bru  Record Meld.bru  Record Tricks.bru  Running Totals.bru  Start New GAme.bru  Start New Hand.bru  bruno.json
api/: Cargo.toml
api/src/: main.rs
api/src/application/: declare_trump.rs  get_completed_hands.rs  get_current_hand.rs  get_game_status.rs  get_running_total.rs  mod.rs  record_bid.rs  record_meld.rs  record_tricks.rs  start_new_game.rs  start_new_hand.rs
api/src/controller/: data_transfer.rs  environment.rs  error_response.rs  mod.rs
api/src/controller/data_transfer/: data_transfer_objects.rs  mod.rs
api/src/controller/infrastructure/: mod.rs
api/src/domain/: game.rs  hand.rs  mod.rs  value.rs
api/src/domain/game/: game.rs  game_error.rs  mod.rs  repository.rs
api/src/domain/hand/: hand.rs  hand_error.rs  mod.rs  repository.rs
api/src/infrastructure/: game_repository.rs  hand_repository.rs  mod.rs
doc/: requirements.md
doc/adr/: 0001-record-architecture-decisions.md  0002-domain-driven-design.md  (+9 more)
frontend-builder/: Cargo.toml  build.rs
pinochle-frontend/: .env.production  package-lock.json  package.json  vite.config.ts
scripts/: rollback.sh
terraform/: .terraform.lock.hcl  apis.tf  backend.hcl  backend.tf  deployment-strategy.md  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
(+81 files in other folders)
