[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { workspace = true }
thiserror = { workspace = true }
dashmap = "5.5"
tokio = {  version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros", "tracing"] }
async-trait = "0.1"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0"
anyhow = "1"

[dev-dependencies]